# ai-document-operation

./: .env.example  .gitignore  AGENT.md  CONTRIBUTING.md  DESIGN.md  README.md  ROADMAP.md  RUN_GUIDE.md  docker-compose.yml  test_model.py
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_update_users_role_constraint.py  003_add_paused_to_session_status.py  004_update_step_type_constraint.py  005_add_llm_providers_models_configs.py  2026_06_27_1449_6f56e7b3a5e7_add_chat_sessions_and_messages.py
backend/app/: config.py  main.py
backend/app/agents/: graph.py  safety.py  state.py
backend/app/agents/agents/: __init__.py  chat.py  doc_qa.py  router.py  summarise.py
backend/app/agents/nodes/: reason.py  retrieve.py  synthesize.py
backend/app/agents/tools/: delegate_tool.py  rag_tool.py
backend/app/api/middleware/: request_id.py
backend/app/api/schemas/: auth.py  common.py  extraction.py  parsing.py  provider.py  qa.py  reports.py
backend/app/api/v1/: agent.py  auth.py  chat.py  dashboard.py  documents.py  eval.py  extraction.py  parsing.py  providers.py  qa.py  reports.py  risks.py  router.py  search.py
backend/app/app/: logging.py
backend/app/app/agents/: graph.py
backend/app/app/app/: deps.py
backend/app/app/auth/: jwt.py  password.py
backend/app/app/db/: base.py  session.py
backend/app/app/eval/: datasets.py  evaluator.py
backend/app/app/llm/: openai_provider.py
backend/app/app/observability/: metrics.py
backend/app/auth/: dependencies.py
backend/app/db/: seed.py  session.py
backend/app/harness/: __init__.py  agent_graph.py  agent_registry.py  agent_spec.py  cancel_token.py  event_manager.py  hil_service.py  multi_agent.py  plugin_loader.py  rate_limiter.py
backend/app/llm/: anthropic_provider.py  factory.py
backend/app/observability/: langfuse_client.py  structured_logging.py
backend/app/processing/: detector.py
backend/app/rag/: answer_generator.py  context_compiler.py  embedder.py  fusion.py  query_rewrite.py  query_understanding.py
backend/app/services/: agent_service.py  chat_service.py  document_service.py  field_extractor.py  field_normalizer.py  indexing_service.py  pdf_export.py  provider_service.py  qa_service.py  report_service.py  risk_detector.py  storage.py  validation.py
backend/app/vector/: client.py  collections.py
backend/tests/: conftest.py
backend/tests/api/: test_health.py
backend/tests/cache/: test_redis.py
backend/tests/db/: test_base.py
backend/tests/middleware/: test_error_handler.py  test_request_id.py
backend/tests/storage/: test_local.py
backend/tests/unit/: test_config.py  test_file_utils.py  test_hash.py  test_schemas.py
backend/tests/vector/: test_client.py
(+240 files in other folders)
