[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-doc-ops-agent"
version = "1.0.0"
description = "AI Document Operations Agent — intelligent document processing platform"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "AI DocOps Team" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.6,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "redis>=5.0,<6.0",
    "qdrant-client>=1.9,<2.0",
    "minio>=7.2,<8.0",
    "langchain>=0.2,<1.0",
    "langgraph>=0.1,<1.0",
    "structlog>=24.1,<25.0",
    "opentelemetry-api>=1.25,<2.0",
    "opentelemetry-sdk>=1.25,<2.0",
    "httpx>=0.27,<1.0",
    "python-multipart>=0.0.9",
    "arq>=0.26,<1.0",
    "PyJWT>=2.8,<3.0",
    "bcrypt>=4.0,<6.0",
    "pydantic[email]>=2.6,<3.0",
    "anthropic>=0.34,<1.0",
    "openai>=1.30,<2.0",
    "PyMuPDF>=1.24,<2.0",
    "python-docx>=1.1,<2.0",
    "openpyxl>=3.1,<4.0",
]

[project.optional-dependencies]
observability = [
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-http>=1.25,<2.0",
    "langfuse>=2.0,<3.0",
    "prometheus-client>=0.20,<1.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
    "types-redis>=4.6,<6.0",
]

[project.scripts]
docops = "app.main:create_app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "minio.*",
    "qdrant_client.*",
    "langchain.*",
    "langgraph.*",
    "arq.*",
    "langfuse.*",
    "opentelemetry.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
